--- a/styles.css
+++ b/styles.css
@@ -11292,7 +11292,7 @@ body {
 }
 .center {
   display: block;
-  margin-left: 25%;
+  margin-left: auto%;
   margin-right: auto;
   width: 100%;
 }
